<resources>

    <string name="app_name">TimeTracker</string>
    <string name="menu_settings">Settings</string>
    <string name="app_title">TimeTracker</string>
    <string name="title_time_tracker_activity">TimeTracker</string>
    
    <string name="time">Time</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="resume">Resume</string>
    <string name="ok">OK</string>
    
    <string name="details">Details</string>
    <string name="macros">Macros</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="rightCancel">Cancel &gt;&gt;</string>
    <string name="rightSave">Save >></string>
    <string name="rightMacros">Macros >></string>
    <string name="rightAdd">Add &gt;&gt;</string>
    <string name="rightEdit">Edit &gt;&gt;</string>
    
    <string name="leftDetails">&lt;&lt; Details</string>
    <string name="leftBack">&lt;&lt; Back</string>
    <string name="leftSave">&lt;&lt; Save</string>
    <string name="leftCancel">&lt;&lt; Cancel</string>
    
    <string name="hintDescription">Description</string>
    <string name="hintTitle">Title</string>
    <string name="hintCalendar">Calender:</string>
    
    <string name="lblTitle">Title: </string>
    <string name="lblCalendar">Calendar: </string>
    <string name="lblStartTime">Begin: </string>
    <string name="lblStopTime">End: </string>
    
<!--  softcoded  -->
    <string name="stop">Stop</string>
    <string name="none"></string>
    <string name="running">running</string>
    
<!--Error messages-->
<!--MacroSettingsActivity-->
    <string name="error_recognize_calendar">Failed to recognize calender</string>
    <string name="error_no_selection">No selection made</string>
    <string name="error_load_calendars">Error initializing calendars</string>
<!--ActiviteitEditDialog-->
    <!--<string name="error_load_calendars">Error initializing calendars</string>-->
    <string name="error_load_calendar_default">Error loading calendar, using default</string>
    
    
    <string name="activiteit_edit_dialog_title">Editing event</string>
    <string name="activiteit_prefix">Activity</string>

</resources>