<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <TextView
        android:id="@+id/lblDialogEditActiviteitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitle" />




    <EditText
        android:id="@+id/txtDialogEditActiviteitTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintTitle"
         >

<requestFocus /></EditText>



    <TextView
        android:id="@+id/lblDialogEditActiviteitCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCalendar" />


    <Spinner
        android:id="@+id/spinnerDialogEditActiviteitCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/da_tvBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblStartTime" />



    <TimePicker
        android:id="@+id/timeDialogEditActiviteitStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >



        <Button
            android:id="@+id/btnDialogEditActiviteitCancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />



        <Button
            android:id="@+id/btnDialogEditActiviteitOK"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>